Added My Connection Strings

--- a/samples/FlowCiao.Samples.Phone/appsettings.json
+++ b/samples/FlowCiao.Samples.Phone/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FlowCiao": "TrustServerCertificate=True;Integrated Security=True;Initial Catalog=FlowCiaoPhone;Data Source=."
+    "FlowCiao": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalogue=Test;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
