--- a/samples/FlowCiao.Samples.Ticketing/appsettings.json
+++ b/samples/FlowCiao.Samples.Ticketing/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FlowCiao": "TrustServerCertificate=True;Integrated Security=True;Initial Catalog=FlowCiaoTicketing;Data Source=."
+    "FlowCiao": "Server=(localdb)\\MSSQLLocalDB;Database=FlowCiao;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
