--- a/src/FlowCiao.Studio/appsettings.Development.json
+++ b/src/FlowCiao.Studio/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FlowCiao": "TrustServerCertificate=True;Integrated Security=True;Initial Catalog=FlowCiaoStudio;Data Source=."
+    "FlowCiao": "Server=(localdb)\\MSSQLLocalDB;Database=FlowCiaoDb;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
